[package]
name = "juke"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/BumpyBill/juke/"
documentation = "https://docs.rs/juke"
description = "🤖 A small engine for prototyping projects"
keywords = ["gamedev", "graphics", "game-engine", "game", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
num = "0.4.0"
