[package]
name = "juke"
version = "0.0.111"
edition = "2021"
license = "MIT"
repository = "https://github.com/BumpyBill/juke/"
documentation = "https://docs.rs/juke"
description = "🤖 A small engine for prototyping projects"
keywords = ["gamedev", "graphics", "game-engine", "game", "gui"]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false, features = ["links"] }
env_logger = "0.9"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
